<resources>
    <string name="app_name">SSTECH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SSTech</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Menu de navegación</string>
    <string name="action_settings">Settings</string>

    <!--MainAvtivity - menu de inicio-->
    <string name="menu_home">Menu Principal</string>
    <string name="menu_cita">Registrar cita</string>
    <string name="menu_historial">Historial de pedidos</string>
    <string name="menu_tecnicos">Técnicos</string>
    <string name="menu_acerca">Acerca de ...</string>
    <string name="menu_empleados">Empleados</string>
    <string name="menu_reparaciones">Reparaciones</string>
    <string name="menu_componentes">Componentes</string>

    <string name="datosSstech">SSTECH es una empresa especializada en la reparación de dispositivos electrónicos y equipos tecnológicos para estudiantes del CETI (Centro de Enseñanza Técnica Industrial) plantel Colomos. La empresa ofrece servicios de mantenimiento y reparación de computadoras portátiles, teléfonos móviles, tabletas y otros dispositivos utilizados por los estudiantes en sus actividades académicas. SSTECH se distingue por su compromiso con la calidad y la rapidez en sus servicios, proporcionando soluciones eficientes a precios accesibles para la comunidad estudiantil. Además, la empresa promueve el aprendizaje práctico, involucrando a estudiantes en programas de pasantías y prácticas profesionales, lo que les permite adquirir experiencia real en el campo de la tecnología y las reparaciones.</string>

    <!--Login-->
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>

    <!--Registrar usuario-->
    <string name="tituloRegistrarUsuario">Registrar usuario</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellido">Apellido(s)</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="registrar">Registrar</string>

    <!--Tecnicós-->
    <string name="tecnicos">Técnicos</string>
    <string name="tecnicos_lista">Técnicos disponibles:</string>

    <!--Registrar cita-->
    <string name="registrarCita">Registrar cita</string>
    <string name="id">Id</string>
    <string name="correoCliente">Correo cliente</string>
    <string name="correoEmpleado">Correo emppleado</string>
    <string name="falla">Falla (Descripción del problema)</string>
    <string name="plazo">Plazo</string>
    <string name="costo">Costo</string>

    <!--Historial de pedidos-->
    <string name="historialPedidos">Historial de pedidos</string>

    <!--Empleados-->
    <string name="empleados">Empleados</string>

    <!--Reparaciones-->
    <string name="reparaciones">Reparaciones</string>
    <string name="formularioBuscqueda">Buscar reparacion</string>
    <string name="correoClienteReparacion">Correo cliente</string>
    <string name="informacionReparacion">Sin información</string>

    <!--componentes-->
    <string name="componentes">Componentes</string>
    <string name="formularioRegistroComponentes">Agregar componente</string>
    <string name="formulariobmComponentes">Consultar y modicar componente</string>
    <string name="idComponente">Id</string>
    <string name="nombreComponente">Nombre</string>
    <string name="cantidadStockComponente">Cantidad</string>
    <string name="precioUnitarioComponente">Precio unitario</string>
    <string name="proveedorComponente">Proveedor</string>

    <!--Empleado-->
    <string name="hint_correo_empleado">Correo electrónico</string>
    <string name="hint_nombre_empleado">Nombre</string>
    <string name="hint_apellido_empleado">Apellido</string>
    <string name="hint_tel_empleado">Teléfono</string>
    <string name="hint_puesto_empleado">Puesto</string>
    <string name="hint_esp_empleado">Especialidad</string>
    <string name="hint_contratacion_empleado">Fecha de contratación</string>
    <string name="hint_salario_empleado">Salario</string>

    <string-array name="horario_options">
        <item>Matutino</item>
        <item>Vespertino</item>
    </string-array>

    <string-array name="puesto_options">
        <item>Gerente</item>
        <item>Tecnico</item>
    </string-array>

</resources>