<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sstech_kotlin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_registrar_cita"
        android:name="com.example.sstech_kotlin.ui.cita.RegistrarCitaFragment"
        android:label="@string/menu_cita"
        tools:layout="@layout/fragment_registrar_cita" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.example.sstech_kotlin.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_tecnicos"
        android:name="com.example.sstech_kotlin.ui.tecnicos.TecnicosFragment"
        android:label="@string/menu_tecnicos"
        tools:layout="@layout/fragment_tecnicos" />

    <fragment
        android:id="@+id/nav_acerca"
        android:name="com.example.sstech_kotlin.ui.acerca.AcercaFragment"
        android:label="@string/menu_acerca"
        tools:layout="@layout/fragment_acerca" />

    <fragment
        android:id="@+id/nav_empleados"
        android:name="com.example.sstech_kotlin.ui.empleado.EmpleadosFragment"
        android:label="@string/menu_empleados"
        tools:layout="@layout/fragment_empleados" />

    <fragment
        android:id="@+id/nav_reparaciones"
        android:name="com.example.sstech_kotlin.ui.reparar.ReparacionesFragment"
        android:label="@string/menu_reparaciones"
        tools:layout="@layout/fragment_reparaciones" />

    <fragment
        android:id="@+id/nav_componentes"
        android:name="com.example.sstech_kotlin.ui.componente.ComponentesFragment"
        android:label="@string/menu_componentes"
        tools:layout="@layout/fragment_componentes" />
</navigation>