<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_empleados"
            android:icon="@drawable/baseline_groups_24"
            android:title="@string/menu_empleados" />
        <item
            android:id="@+id/nav_reparaciones"
            android:icon="@drawable/baseline_build_24"
            android:title="@string/menu_reparaciones" />
        <item
            android:id="@+id/nav_componentes"
            android:icon="@drawable/baseline_computer_24"
            android:title="@string/menu_componentes" />
        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/baseline_info_outline_24"
            android:title="@string/menu_acerca" />
    </group>
</menu>