<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.componente.RegistrarComponente">

    <TextView
        android:id="@+id/lblRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/formularioRegistroComponentes"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreComponente"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nombreComponente"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRegistro" />

    <EditText
        android:id="@+id/txtCantidadComponente"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cantidadStockComponente"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreComponente" />

    <EditText
        android:id="@+id/txtPrecioUnitarioComponente"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/precioUnitarioComponente"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCantidadComponente" />

    <EditText
        android:id="@+id/txtProvedorComponente"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/proveedorComponente"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecioUnitarioComponente" />

    <ImageButton
        android:id="@+id/btnRegistrar"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:background="#1E90FF"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProvedorComponente"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/baseline_add_box_30" />

    <ImageButton
        android:id="@+id/btnRegresar"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="48dp"
        android:background="#D3D3D3"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProvedorComponente"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/back_30" />

</androidx.constraintlayout.widget.ConstraintLayout>