<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.empleado.RegistrarEmpleado">

    <TextView
        android:id="@+id/lblRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Registrar Empleado"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCorreoEmpleado"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_correo_empleado"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRegistro" />

    <EditText
        android:id="@+id/txtNombreEmpleado"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_nombre_empleado"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoEmpleado" />

    <EditText
        android:id="@+id/txtApellidoEmpleado"
        android:layout_width="291dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_apellido_empleado"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreEmpleado" />

    <EditText
        android:id="@+id/txtTelEmpleado"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_tel_empleado"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoEmpleado" />

    <Spinner
        android:id="@+id/spinnerPuestoEmpleado"
        android:layout_width="297dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelEmpleado" />

    <EditText
        android:id="@+id/txtEspEmpleado"
        android:layout_width="298dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_esp_empleado"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPuestoEmpleado" />

    <Spinner
        android:id="@+id/spinnerHorarioEmpleado"
        android:layout_width="298dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEspEmpleado" />

    <EditText
        android:id="@+id/txtContratacionEmpleado"
        android:layout_width="305dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_contratacion_empleado"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHorarioEmpleado" />

    <EditText
        android:id="@+id/txtSalarioEmpleado"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_salario_empleado"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContratacionEmpleado" />

    <ImageButton
        android:id="@+id/btnRegistrar"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:background="#1E90FF"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSalarioEmpleado"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/baseline_add_box_30" />

    <ImageButton
        android:id="@+id/btnRegresar"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="48dp"
        android:background="#D3D3D3"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSalarioEmpleado"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/back_30" />

</androidx.constraintlayout.widget.ConstraintLayout>